SOLO FALTA QUE TU PARRA INTEGRES LAS INSTRUCCIONES RONAL SOLO TIENEN QUE MODIFICAR EL SCRIP DEL  .DAT MANIANA LO ARREGLO LA INTERFAZ

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,21 @@ dist.dir=dist
 dist.jar=${dist.dir}/HuertoOrganico.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.appframework-1.0.3.jar=lib\\appframework-1.0.3.jar
 file.reference.jess.jar=lib\\jess.jar
+file.reference.jess.jar-1=D:\\LIBROS UMSS\\Libros 2-2016\\SISTEMAS EXPERTOS 2 2016\\ sistemasExpertoInstruccionPlantacionCebolla\\lib\\jess.jar
+file.reference.jpedal_lgpl.jar=lib\\jpedal_lgpl.jar
+file.reference.JTattooDemo.jar=lib\\JTattooDemo.jar
+file.reference.substance.jar=lib\\substance.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jess.jar}
+    ${file.reference.jess.jar}:\
+    ${file.reference.jess.jar-1}:\
+    ${file.reference.substance.jar}:\
+    ${file.reference.JTattooDemo.jar}:\
+    ${file.reference.appframework-1.0.3.jar}:\
+    ${file.reference.jpedal_lgpl.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
