agregando la libreria jess al proyecto

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,12 +36,12 @@ file.reference.substance.jar=lib\\substance.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jess.jar}:\
     ${file.reference.jess.jar-1}:\
     ${file.reference.substance.jar}:\
     ${file.reference.JTattooDemo.jar}:\
     ${file.reference.appframework-1.0.3.jar}:\
-    ${file.reference.jpedal_lgpl.jar}
+    ${file.reference.jpedal_lgpl.jar}:\
+    ${file.reference.jess.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
